--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.1.2",
+    "react-geolocated": "^2.4.1",
     "react-google-maps": "^9.4.5",
+    "react-native-maps": "^0.24.2",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
   },
