--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-geolocated": "^2.4.1",
     "react-google-maps": "^9.4.5",
     "react-native-maps": "^0.24.2",
+    "react-recaptcha": "^2.3.10",
+    "react-recaptcha-google": "^1.1.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
   },
