--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-geocode": "^0.1.2",
     "react-geolocated": "^2.4.1",
     "react-google-maps": "^9.4.5",
+    "react-google-maps-loader": "^4.2.5",
+    "react-google-places-suggest": "^3.8.0",
     "react-native-maps": "^0.24.2",
     "react-recaptcha": "^2.3.10",
     "react-recaptcha-google": "^1.1.1",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
   },
