--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
