--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
