--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-recaptcha": "^2.3.10",
     "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
